[Spec Kit] Finalize API React refactor
